--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "www",
-	"version": "2.2.0",
+	"name": "alpePay-portal-gravity",
+	"version": "0.1.0",
 	"private": true,
 	"scripts": {
 		"ng": "node_modules/.bin/ng",
